--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -20,6 +20,13 @@ publisher:
   url: http://example.org/example-publisher
   # email: test@example.org
 
+# use some mcode extensions
+dependencies:
+  hl7.fhir.us.mcode:
+    id: mcode
+    version: 2.0.0
+
+
 # The dependencies property corresponds to IG.dependsOn. The key is the
 # package id and the value is the version (or dev/current). For advanced
 # use cases, the value can be an object with keys for id, uri, and version.
