--- a/fsh-generated/resources/StructureDefinition-adjustment-reason.json
+++ b/fsh-generated/resources/StructureDefinition-adjustment-reason.json
@@ -1,11 +1,11 @@
 {
   "resourceType": "StructureDefinition",
-  "id": "cycle-count",
-  "url": "http://actnow.org/StructureDefinition/cycle-count",
+  "id": "adjustment-reason",
+  "url": "http://actnow.org/StructureDefinition/adjustment-reason",
   "version": "0.1.0",
-  "name": "CycleCount",
+  "name": "AdjustmentReason",
   "status": "draft",
-  "description": "The number of cycles that administered for a regimen",
+  "description": "The reason why the dose given was not the same as that in the regimen",
   "jurisdiction": [
     {
       "coding": [
@@ -29,7 +29,7 @@
   "context": [
     {
       "type": "element",
-      "expression": "Observation"
+      "expression": "MedicationAdministration"
     }
   ],
   "type": "Extension",
@@ -40,7 +40,7 @@
       {
         "id": "Extension",
         "path": "Extension",
-        "definition": "The number of cycles that administered for a regimen"
+        "definition": "The reason why the dose given was not the same as that in the regimen"
       },
       {
         "id": "Extension.extension",
@@ -50,14 +50,14 @@
       {
         "id": "Extension.url",
         "path": "Extension.url",
-        "fixedUri": "http://actnow.org/StructureDefinition/cycle-count"
+        "fixedUri": "http://actnow.org/StructureDefinition/adjustment-reason"
       },
       {
         "id": "Extension.value[x]",
         "path": "Extension.value[x]",
         "type": [
           {
-            "code": "integer"
+            "code": "CodeableConcept"
           }
         ]
       }
