--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-actnow.clinfhir.com.json
+ig = fsh-generated/resources/ImplementationGuide-actnow.canshare.co.nz.json
 template = fhir.base.template#current
