--- a/fsh-generated/resources/CodeSystem-regimen-discontinued-reason.json
+++ b/fsh-generated/resources/CodeSystem-regimen-discontinued-reason.json
@@ -7,7 +7,7 @@
   "title": "The reason why a regimen was discontinued",
   "description": "The reason why a regimen was discontinued",
   "version": "0.1.0",
-  "url": "http://actnow.org/CodeSystem/regimen-discontinued-reason-vs",
+  "url": "http://canshare.co.nz/fhir/CodeSystem/regimen-discontinued-reason-vs",
   "concept": [
     {
       "code": "died",
