--- a/fsh-generated/resources/ImplementationGuide-actnow.canshare.co.nz.json
+++ b/fsh-generated/resources/ImplementationGuide-actnow.canshare.co.nz.json
@@ -13,7 +13,7 @@
       "telecom": [
         {
           "system": "email",
-          "value": "david.hay25@gmail.com"
+          "value": "mailto:david.hay25@gmail.com"
         }
       ]
     }
@@ -211,187 +211,10 @@
       },
       {
         "reference": {
-          "reference": "Condition/an-cancer"
-        },
-        "name": "The cancer being treated",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "CareTeam/an-careteam"
-        },
-        "name": "Auckland Oncology",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Bundle/an-completeBundle"
-        },
-        "name": "an-completeBundle",
-        "description": "A Bundle containing all the resources for a single cycle of treatment for a regimen",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Patient/an-patient"
-        },
-        "name": "Lorrie Lung",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Practitioner/an-practitioner"
-        },
-        "name": "Marcus Welby",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/bsa-cycle1"
-        },
-        "name": "BSA at start of cycle 1",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/cM"
-        },
-        "name": "cM",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/cN"
-        },
-        "name": "cN",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/cT"
-        },
-        "name": "cT",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/cTNM"
-        },
-        "name": "cTNM",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/cc1"
-        },
-        "name": "Creatinine clearance",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "CarePlan/cycle1"
-        },
-        "name": "First cycle of treatment",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/cycle1Outcome"
-        },
-        "name": "Outcome of regimen",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "CarePlan/cycle2"
-        },
-        "name": "Second cycle of treatment",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/ecog-cycle1"
-        },
-        "name": "ECOG at start of cycle 1",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/ecog-regimen"
-        },
-        "name": "ECOG at start of regimen",
-        "exampleCanonical": "http://canshare.com/fhir/StructureDefinition/observation-ecog"
-      },
-      {
-        "reference": {
           "reference": "SearchParameter/ma-basedOn"
         },
         "name": "ma-basedOn",
         "description": "based-on extension for MedicationAdmin -> CarePlan",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "MedicationAdministration/medication1"
-        },
-        "name": "A single medication administration",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "MedicationAdministration/medication2"
-        },
-        "name": "A single medication administration",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Observation/regimenOutcome"
-        },
-        "name": "Outcome of regimen",
-        "exampleCanonical": "http://canshare.com/fhir/StructureDefinition/observation-regimen-outcome"
-      },
-      {
-        "reference": {
-          "reference": "CarePlan/regimenPlan1"
-        },
-        "name": "Regimen details",
-        "exampleCanonical": "http://canshare.co.nz/fhir/StructureDefinition/actnow-careplan-regimen"
-      },
-      {
-        "reference": {
-          "reference": "Bundle/scen1-bundle-1"
-        },
-        "name": "scen1-bundle-1",
-        "description": "First bundle of scenario 1",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "CarePlan/scen1-cycle-plan1-v1"
-        },
-        "name": "First cycle of treatment",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "CarePlan/scen1-cycle-plan1-v2"
-        },
-        "name": "First cycle of treatment",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "Patient/scen1-patient"
-        },
-        "name": "Lorrie Lung",
-        "exampleBoolean": true
-      },
-      {
-        "reference": {
-          "reference": "CarePlan/scen1-regimen-plan-v1"
-        },
-        "name": "Regimen details",
         "exampleBoolean": true
       },
       {
