--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -18,7 +18,7 @@ releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | re
 publisher:
   name: Te aho o te kahu - Cancer Control Agency
   # url: http://example.org/example-publisher
-  email: david.hay25@gmail.com
+  email: mailto:david.hay25@gmail.com
 
 # use some mcode extensions
 dependencies:
