--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -21,18 +21,18 @@ publisher:
   email: mailto:david.hay25@gmail.com
 
 # use some mcode extensions
-dependencies:
+# dependencies:
 
 
-  hl7.fhir.us.mcode:
-    id: mcode
-    version: 2.0.0
+   # hl7.fhir.us.mcode:
+     # id: mcode
+     # version: 2.0.0
 
 
 
 menu:
   Home: index.html
-  Overview: overview.html
+  Resource graph: resource-graph.html
   Architecture : architecture.html
   API: 
     Input API: api-input.html
