--- a/fsh-generated/resources/ValueSet-an-dose-adjustment-reason-vs.json
+++ b/fsh-generated/resources/ValueSet-an-dose-adjustment-reason-vs.json
@@ -3,8 +3,8 @@
   "status": "active",
   "name": "AnDoseAdjustmentReason",
   "id": "an-dose-adjustment-reason-vs",
-  "title": "Intent of treatment",
-  "description": "What was the purpose of this treatment",
+  "title": "Dose Adjustment reason",
+  "description": "The reason why the dose was adjusted",
   "version": "0.1.0",
   "url": "http://canshare.co.nz/fhir/ValueSet/an-dose-adjustment-reason-vs",
   "experimental": false,
