--- a/fsh-generated/resources/CodeSystem-an-dose-adjustment-reason-cs.json
+++ b/fsh-generated/resources/CodeSystem-an-dose-adjustment-reason-cs.json
@@ -4,8 +4,8 @@
   "content": "complete",
   "name": "AnDoseAdjustmentReason",
   "id": "an-dose-adjustment-reason-cs",
-  "title": "Intent of treatment",
-  "description": "What was the purpose of this treatment",
+  "title": "Dose Adjustment reason",
+  "description": "The reason why the dose was adjusted",
   "version": "0.1.0",
   "url": "http://canshare.co.nz/fhir/CodeSystem/an-dose-adjustment-reason-cs",
   "concept": [
