--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -21,13 +21,13 @@ publisher:
   # url: http://example.org/example-publisher
   email: mailto:david.hay25@gmail.com
 
-# use some mcode extensions
-# dependencies:
+# use some mcode extensions (laterality)
+dependencies:
+  hl7.org.nz.fhir.ig.cca: current
 
-
-   # hl7.fhir.us.mcode:
-     # id: mcode
-     # version: 2.0.0
+  hl7.fhir.us.mcode:
+    id: mcode
+    version: 2.0.0
 
 
 
